--- a/assest/css/style.css
+++ b/assest/css/style.css
@@ -6,6 +6,9 @@ body {
     font-family: -apple-system, ".SFNSText-Regular", "San Francisco", "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", Arial, sans-serif;
     line-height: 1.5;
 }
+p{
+    font-size: 20px;
+}
 ._details{
     margin-left: 0px !important;
 }
@@ -17,4 +20,21 @@ body {
     list-style: none;
     text-decoration: none;
     color: #494e52;
+
+}
+.footer ul{
+float: left;
+}
+footer{
+    color: #9ba1a6;
+    width: 100%;
+    margin-top: 48px;
+    background-color: #f2f3f3;
+    border-top: 1px solid #bdc1c4;
+    clear: both;
+    position: absolute;
+}
+
+footer a {
+    text-decoration: none;
 }
