--- a/assest/css/style.css
+++ b/assest/css/style.css
@@ -9,12 +9,34 @@ body {
 p{
     font-size: 20px;
 }
+._0text1{
+    font-size:13px !important;
+}
+._0text2{
+    font-size:15px !important;
+    /* font-weight: 400; */
+    /* line-height: 1em; */
+}
 ._details{
-    margin-left: 0px !important;
+    /* margin-left: 0px !important; */
+}
+.social-icons{
+    list-style-type: none;
+    padding: 0;
 }
 .social-icons li{
+    
+    text-decoration: none;
+}
+.social-icons2 li{
+    display: inline;
+    text-decoration: none;
+}
+.social-icons2 a{
     list-style: none;
     text-decoration: none;
+    color: #494e52;
+
 }
 .social-icons a{
     list-style: none;
@@ -37,4 +59,10 @@ footer{
 
 footer a {
     text-decoration: none;
+}
+
+@media only screen and (min-width: 1025px) {
+    .details{
+        justify-content: center;
+    }
 }
